tests/phase_00_lexer_errors/invalid/02_unknown_character_hash.hulk
// El lexer debe reportar # como caracter desconocido y emitir UNKNOWN.
print(#);
